# Alluxio-C-

./: '  .gitignore  .gitingore  .makefile.swp  Alluxio-Cpp.cbp  Alluxio-Cpp.depend  Alluxio-Cpp.layout  alluxio-client-env.sh  alluxio-client-env.sh~  configure.ac  main.cpp  makefile  makefile~  remove.sh  run.sh  run2.sh~  setup.sh  test.cpp  testjava
alluxio/: AlluxioURI.java~  Pair.java~  Sample2.java  Sample2.java~  URI.java~
alluxio/r/: testObj.java  testObj.java~
include/: Client.h  Client.hpp  CreateFileOptions.h  Exceptions.hpp  FileInStream.h  FileInfo.h  FileOutStream.h  FileSystem.h  FileSystemTest.h  JNIHelper.h  Options.h  Options.hpp  Status.h  Status_Backup.h.h  Wire.h  Wire.hpp
r/: Sample2.java  testObj.java
src/: Client.cpp  CreateFileOptions.cpp  FileInStream.cpp  FileInfo.cpp  FileOutStream.cpp  FileSystem.cpp  FileSystemTest.cpp  JNIHelper.cpp  Makefile.am  Makefile.am~  Status.cpp  main.cpp
